# lair-chat

./: .dockerignore  .env  .env.example  .gitignore  .rustfmt.toml  ADMIN_API_TEST_SUMMARY.md  ADMIN_SYSTEM_GUIDE.md  ADMIN_USER_MANAGEMENT_COMPLETION_SUMMARY.md  AES_GCM_MIGRATION_ACTION_PLAN.md  API_DOCUMENTATION.md  ASYNC_INTEGRATION_STRATEGY.md  AUTHENTICATION_IMPLEMENTATION_COMPLETE.md  AUTHENTICATION_RACE_CONDITION_FIX.md  AUTHENTICATION_STATE.md  COMMIT_MESSAGE.txt  COMMIT_MESSAGE_ADMIN_USER_MANAGEMENT_COMPLETE.txt  COMMIT_MESSAGE_API_FRAMEWORK.txt  COMMIT_MESSAGE_AUTHENTICATION_COMPLETE.txt  COMMIT_MESSAGE_FINAL.txt  COMMIT_MESSAGE_PHASE_7_TASK_7.3.txt  COMMIT_MESSAGE_REST_API_SERVER_INTEGRATION.txt  COMMIT_MESSAGE_SESSION_MANAGEMENT_COMPLETE.txt  COMMIT_MESSAGE_SPRINT_2_COMPLETE.txt  COMMIT_MESSAGE_SPRINT_3_COMPLETE.txt  COMMIT_MESSAGE_SPRINT_4_COMPLETE.txt  COMMIT_MESSAGE_TIMELINE_UPDATE.txt  COMMIT_MESSAGE_UAT_COMPLETION.txt  CONNECTION_KEY_BEHAVIOR.md  CONTENT_WIDTH_COLORING.md  CONTRIBUTING.md  CURRENT_SPRINT_STATUS.md  CURRENT_STATUS.md  Cargo.toml  DEVELOPMENT_PROGRESS_SUMMARY.md  DM_BUG_FIXES.md  DM_IMPLEMENTATION_ACTION_PLAN.md  DM_MESSAGE_FIX.md  DOCUMENTATION_SUMMARY.md  Dockerfile  ENCRYPTION_MIGRATION_GUIDE.md  (+127 more)
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  release.yml  security.yml
admin-dashboard/: index.html
admin-dashboard/css/: enhanced.css
admin-dashboard/js/: enhanced.js
archive/debug-artifacts/: bob_debug.txt  debug_invite_test.sh  debug_test.exp  demo_phase5.sh  quick_reset.sh  quick_start.sh  reset_database.sh  start_admin_test.sh  start_server_fixed.sh  test  test2  test_all_functionality.exp  test_invitation.sh  test_invitation_debug.rs  test_message_router_direct.rs  test_phase5_features.sh  test_phase6_invitations.sh  test_rest_server.rs  test_simple.md  uat_validation.rs
archive/development-history/: COMMIT_MESSAGE_COMPILATION_FIXES.txt  COMPLETE_PROTOCOL_FIXES.md  DATABASE_SERIALIZATION_FIXES.md  DOCUMENTATION_UPDATE_VERIFICATION.md  HELP_COMMAND_FIX.md  INTEGRATED_SERVER_GUIDE.md  INVITATION_DISPLAY_FIX.md  INVITATION_FIX_FINAL.md  INVITATION_SYSTEM_FIX.md  INVITATION_SYSTEM_SUMMARY.md  PHASE_6_COMPLETION_SUMMARY.md  PHASE_6_HANDOFF.md  PHASE_7_TASK_7.3_COMPLETION_SUMMARY.md  PHASE_8_TASK_8.2_QUICK_REFERENCE.md  PHASE_8_TASK_8.3_EXECUTION_GUIDE.md  PHASE_8_TASK_8.3_HANDOFF.md  PHASE_8_TASK_8.3_IMPLEMENTATION_SUMMARY.md  PHASE_8_TASK_8.4_COMPILATION_FIXES_HANDOFF.md  PROGRESS_SUMMARY.md  REGISTRATION_IMPROVEMENTS.md  REST_API_GUIDE.md  ROOM_CREATION_FIX.md  SYSTEM_MESSAGE_CLEANUP.md  TASK_8_2_COMMIT_MESSAGE.txt  TASK_8_2_COMPLETE.md  TASK_8_2_IMPLEMENTATION_SUMMARY.md  TCP_DATABASE_MIGRATION_STRATEGY.md
backups/db_backup_20250617_172337/: lair-chat.db  lair-chat.db-shm  lair-chat.db-wal
backups/db_backup_20250617_173437/: lair-chat.db  lair-chat.db-shm  lair-chat.db-wal
backups/db_backup_20250617_181555/: lair-chat.db  lair-chat.db-shm  lair-chat.db-wal
backups/db_backup_20250617_181809/: lair-chat.db
backups/db_backup_20250617_184249/: lair-chat.db  lair-chat.db-shm  lair-chat.db-wal  lair_chat.db-shm  lair_chat.db-wal
backups/db_backup_20250617_194050/: lair-chat.db  lair-chat.db-shm  lair-chat.db-wal  lair_chat.db-shm  lair_chat.db-wal
backups/db_backup_20250617_195303/: lair-chat.db
benches/: connection_benchmarks.rs  message_benchmarks.rs  transport_benchmarks.rs
config/: server-new.toml  server.toml  test.toml
crates/lair-chat-client/: Cargo.toml  README.md
crates/lair-chat-client/src/: app.rs  main.rs
crates/lair-chat-client/src/components/: chat.rs  command_palette.rs  dialog.rs  help.rs  invitations.rs  login.rs  members.rs  mod.rs  rooms.rs  status.rs  toast.rs
crates/lair-chat-client/src/crypto/: aes_gcm.rs  key_exchange.rs  mod.rs
crates/lair-chat-client/src/protocol/: http.rs  messages.rs  mod.rs  tcp.rs  ws.rs
crates/lair-chat-server/: Cargo.toml  README.md
crates/lair-chat-server/src/: error.rs  lib.rs  main.rs
crates/lair-chat-server/src/adapters/: mod.rs
crates/lair-chat-server/src/adapters/http/: mod.rs  routes.rs  server.rs
crates/lair-chat-server/src/adapters/http/handlers/: admin.rs  auth.rs  health.rs  invitations.rs  messages.rs  metrics.rs  mod.rs  room_members.rs  rooms.rs  users.rs  websocket.rs
crates/lair-chat-server/src/adapters/http/middleware/: auth.rs  metrics.rs  mod.rs  rate_limit.rs
crates/lair-chat-server/src/adapters/tcp/: commands.rs  connection.rs  mod.rs  protocol.rs  server.rs
crates/lair-chat-server/src/adapters/ws/: mod.rs
crates/lair-chat-server/src/config/: mod.rs  settings.rs
crates/lair-chat-server/src/core/: auth.rs  engine.rs  events.rs  jwt.rs  messaging.rs  mod.rs  rooms.rs  sessions.rs
crates/lair-chat-server/src/crypto/: aes_gcm.rs  key_exchange.rs  mod.rs
crates/lair-chat-server/src/domain/: events.rs  invitation.rs  message.rs  mod.rs  room.rs  session.rs  user.rs
crates/lair-chat-server/src/storage/: mod.rs  traits.rs
crates/lair-chat-server/src/storage/sqlite/: invitations.rs  messages.rs  migrations.rs  mod.rs  rooms.rs  sessions.rs  users.rs
crates/lair-chat-server/tests/: http_integration.rs  https_integration.rs  tcp_integration.rs  websocket_integration.rs
data/: lair-chat.db
docs/: CLEANUP_SUMMARY.md  DOCUMENTATION_CLEANUP_SUMMARY.md  PROJECT_PROGRESS.md  README.md  REAL_WORLD_TESTING_GUIDE.md  ROADMAP.md  uat_usage_guide.md
examples/: test_auth.rs  test_e2e_auth.rs  test_unread_ui.rs  uat_basic_example.rs  unread_messages_demo.rs
scripts/: README.md  create_admin_user.rs  debug_jwt_auth.rs  dev.sh  health_check.sh  load-test.sh  quick_start.sh  rotate_logs.sh  run_client.sh  run_server.sh  show_real_logs.sh  start.sh  test_multiple_clients.sh  test_password.rs  test_sprint4_simple.sh  test_websocket.sh  uat-test.sh  validate_sprint4.sh
src/: lib.rs  shared_types.rs
tests/: commands_test.rs  lib.rs  security_integration_test.rs  session_storage_test.rs  sprint4_completion_test.rs  unread_messages_test.rs  user_acceptance_integration_test.rs  v0_6_0_validation.rs
(+256 files in other folders)
