[package]
name = "lair-chat"
version = "0.6.3"
edition = "2021"
description = "A secure, terminal-based chat application built with Rust, featuring end-to-end encryption, direct messaging, and real-time communication."
license = "MIT"
authors = ["Michael Berry <trismegustis@gmail.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.2"
async-trait = "0.1.74"
base64 = "0.22.1"
better-panic = "0.3.0"
clap = { version = "4.4.5", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.15.6"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "6.0.0"
futures = "0.3.31"
home = "0.5.9"
human-panic = "2.0.2"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.161"
md5 = "0.7.0"
once_cell = "1.19.0"
pretty_assertions = "1.4.1"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.9.9"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tui-input = "0.11.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
im = "15.1"

[build-dependencies]
anyhow = "1.0.95"
vergen-gix = { version = "1.0.6", features = ["build", "cargo"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
fake = "2.9"
rand = "0.8"
tempfile = "3.9"

[[bin]]
name = "lair-chat-client"
path = "src/bin/client.rs"

[[bin]]
name = "lair-chat-server"
path = "src/bin/server.rs"

[[bench]]
name = "transport_benchmarks"
harness = false

[[bench]]
name = "connection_benchmarks"
harness = false

[[bench]]
name = "message_benchmarks"
harness = false
