[workspace]
resolver = "2"
members = [
    "crates/lair-chat-server",
    "crates/lair-chat-client",
]

[workspace.package]
version = "0.8.0"
edition = "2021"
license = "MIT"
authors = ["Michael Berry <trismegustis@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"

# Testing
pretty_assertions = "1.4"
tempfile = "3.24"

# NOTE: The legacy code has been archived to archive/legacy-src/
# The original Cargo.toml configuration is preserved in archive/legacy-Cargo.toml
#
# This workspace represents the new architecture:
# - lair-chat-server: The chat server (TCP + HTTP)
# - lair-chat-client: The TUI client (Phase 5)
#
# See docs/architecture/OVERVIEW.md for the new architecture.
