[package]
name = "lair-chat-client"
version = "0.7.0"
edition = "2021"
description = "Lair Chat TUI Client - A terminal-based chat client"
license = "MIT"
authors = ["Michael Berry <trismegustis@gmail.com>"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
futures = "0.3"

# TUI
ratatui = { version = "0.29", features = ["serde", "macros"] }
crossterm = { version = "0.28", features = ["serde", "event-stream"] }
tui-input = "0.11"

# CLI
clap = { version = "4.4", features = ["derive", "cargo", "wrap_help"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography (for E2E encryption)
aes-gcm = "0.10"
x25519-dalek = { version = "2.0", features = ["getrandom"] }
base64 = "0.22"
rand = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
directories = "6.0"
home = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
color-eyre = "0.6"
better-panic = "0.3"

[dev-dependencies]
tempfile = "3.9"
pretty_assertions = "1.4"
