[package]
name = "lair-chat-server"
version = "0.8.0"
edition = "2021"
description = "Lair Chat Server - A secure, high-performance chat server"
license = "MIT"
authors = ["Michael Berry <trismegustis@gmail.com>"]

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "limit", "timeout"] }
hyper = { version = "1.6", features = ["full"] }
http = "1.4"

# TLS support
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "postgres",
    "mysql",
    "chrono",
    "uuid",
    "json",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Cryptography
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
x25519-dalek = { version = "2.0", features = ["getrandom"] }
sha2 = "0.10"
base64 = "0.22"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
password-hash = "0.5"
rand = "0.8"

# Utilities
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
validator = { version = "0.20", features = ["derive"] }
regex = "1.11"
config = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "serde"] }

# API documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3.25"
axum-test = "18"
pretty_assertions = "1.4"
fake = "4"
tokio-tungstenite = "0.24"
